--- a/docs/de-de/modules/artikel/pages/einheiten.adoc
+++ b/docs/de-de/modules/artikel/pages/einheiten.adoc
@@ -4,8 +4,16 @@
 :id: IHTSF1W
 :author: team-item
 
+//ToDo - In the invisible second part of the file, finalise the text in the chapters "Einheiten kombinieren, um Varianten zu erzeugen", "Vertriebskanäle" and "Artikeletiketten"
+//ToDo - Review the notes on the feature that I took while the dev showed me the new function
+//ToDo - Read through the forum thread about Grundpreisverordnung and make sure all of the important info is found in this page too
+//ToDo - English translation
+//ToDo - GIFs in German and English, also for the Tags page too
+//ToDo - Once the new UI is visible, compare the UI with the descriptions in the manual, as you saw the new feature in a semi-finalised state - some things may have changed
+//ToDo - Once the new UI is visible, delete the first part of the file and make the second part visible
+
 ////
-zuletzt bearbeitet 18.10.2021
+zuletzt bearbeitet 03.06.2022
 ////
 
 Einheiten wie Kilogramm, Liter und Zentimeter helfen dir, die Größe oder Maße deiner Produkte zu definieren.
@@ -131,3 +139,358 @@ Der Grundpreis gibt die Kosten pro Pfund, Liter oder andere Maßeinheit an.
 
 Berechnet wird er auf Grundlage von xref:artikel:artikel-verwalten.adoc#270[Einheit, Inhalt] und xref:artikel:artikel-verwalten.adoc#240[Preis] des Artikels.
 Dargestellt werden kann er xref:artikel:artikel-verwalten.adoc#270[im plentyShop], auf Vertriebskanälen wie xref:maerkte:varianten-vorbereiten.adoc#860[Amazon], xref:maerkte:ebay-einrichten.adoc#4000[eBay], xref:maerkte:otto-market.adoc#1302[OTTO] oder xref:maerkte:plus-gartenxxl.adoc#365[Netto] und xref:artikel:barcodes.adoc#900[auf Artikeletiketten].
+
+
+////
+
+Einheiten wie Kilogramm, Liter und Zentimeter helfen dir, die Größe oder Maße deiner Produkte zu definieren.
+Standardmäßig sind bereits 52 Einheiten nach ISO-Code in plentymarkets gespeichert.
+Wirf zunächst einen Blick auf die bereits vorhandenen Einheiten.
+Bei Bedarf kannst du neue Einheiten erstellen oder die bestehende Einheiten anpassen.
+
+[#100]
+== Neue Einheiten erstellen
+
+Einheiten definieren die Größe oder Maße deiner Produkte.
+Standardmäßig sind bereits 52 Einheiten nach ISO-Code in plentymarkets gespeichert.
+Du kannst jedoch weitere Maßeinheiten bei Bedarf erstellen.
+
+. Öffne das Menü *Einrichtung » Artikel » Einheiten*.
+. Klicke auf icon:plus[role="darkGrey"]. +
+→ Ein Pop-Up Fenster wird geöffnet. Dieses Fenster ist in mehrere Schritte unterteilt.
+. Nimm die Einstellungen in jedem Schritt vor.
+
+[TIP]
+.Einheiten können nicht per Import erstellt werden
+====
+Es ist nur möglich, Einheiten manuell zu erstellen, wie hier in der Anleitung beschrieben.
+Es ist nicht möglich, Einheiten mit Hilfe des Import-Tools zu erstellen.
+====
+
+---
+
+[discrete]
+==== Schritt: Name
+
+[cols="1,4a"]
+|===
+|Einstellung |Erläuterung
+
+| *Name der Einheit* +
+[red]#(Pflichtfeld)#
+|Gib einen Namen für die Einheit ein.
+
+*_Hinweis_*: Dieser Text wird für Kunden im plentyShop sichtbar sein.
+
+| *Position der Einheit* +
+[red]#(Pflichtfeld)#
+|Gib eine Positionsnummer für die Einheit ein.
+
+*_Anwendungsbeispiel_*:
+Einheiten können im Backend z.B. nach ihrer Positionsnummer sortiert dargestellt werden.
+
+| *Maßeinheit (ISO)* +
+[red]#(Pflichtfeld)#
+|Wähle eine Maßeinheit anhand des ISO-Codes.
+
+*_Hinweis_*: Du kannst nur aus den vorhandenen ISO-Codes wählen.
+Die ISO-Codes selber lassen sich nicht manuell erweitern.
+
+| *Dezimalzahlen*
+|Sind Dezimalzahlen für diese Maßeinheit zulässig?
+
+*_Anwendungsbeispiel_*:
+Zum Beispiel macht ein halber Liter Sinn.
+Aber ein halber Kanister wäre dagegen nicht sinnvoll.
+
+|===
+
+---
+
+[discrete]
+==== Schritt: Fertig
+
+[cols="1,4"]
+|===
+|Einstellung |Erläuterung
+
+| *Zusammenfassung*
+a|Hier siehst du eine Zusammenfassung deiner gewählten Einstellungen.
+Klicke auf *Einheit erstellen*, wenn du mit den Angaben einverstanden bist.
+
+Nach der Erstellung hast du folgende Möglichkeiten:
+
+[cols="1,4a"]
+!===
+
+! *Zur Einheit*
+!Das Pop-up-Fenster wird geschlossen und die neu erstellte Einheit wird zur weiteren Bearbeitung geöffnet.
+
+! *Weitere Einheit erstellen*
+!Das Pop-up-Fenster wird für die nächste Einheit neu gestartet.
+
+! *Schliessen*
+!Das Pop-up-Fenster wird geschlossen.
+
+!===
+
+|===
+
+[.collapseBox]
+.*Zur Einheit: Welche erweiterte Einstellungen gibt es?*
+--
+
+[cols="1,3a"]
+|===
+|Einstellung |Erläuterung
+
+| *ID*
+| Die Einheit-ID wird automatisch vergeben und ist nicht änderbar.
+Sie dient zur eindeutigen Kennzeichnung deiner Einheiten.
+
+*_Anwendungsfall_*: Einheit-Verknüpfungen können importiert werden.
+Während du also z.B. Artikel- und Variantendaten importierst, kannst du die passenden Einheiten auch direkt verknüpfen.
+Dies geschieht z.B. durch Angabe der Einheit-ID.
+
+| *Name EN* +
+*Name FR* +
+*Name IT* +
+usw.
+|Ist dein plentyShop in mehreren Sprachen verfügbar?
+Die Inhalt und Einheit einer Variante ist für Kunden im Webshop sichtbar, z.B. 1 Stück, 500 Gramm, 2,4 Liter, usw.
+Wenn dein Webshop in mehreren Sprachen verfügbar ist, sollten auch die Einheit-Namen in diesen Sprachen erscheinen.
+
+. Klicke auf icon:plus[role="darkGrey"] und wähle eine Sprachversion aus der Dropdown-Liste.
+. Gib eine Übersetzung des Namens in dieser Sprache ein.
+
+|===
+
+--
+
+[#130]
+== Bestehende Einheiten finden
+
+
+Nutze die Suchfunktion, um bereits erstellte Einheiten zu finden und sie weiter zu bearbeiten.
+
+. Öffne das Menü *Einrichtung » Artikel » Einheiten*.
+.. *_Möglichkeit 1_*: Klicke auf icon:search[role="darkGrey"], um direkt eine Liste aller Einheiten zu sehen.
+.. *_Möglichkeit 2_*: Gib eine Zahl oder einen Text in das Suchfeld ein und klicke auf einen der automatischen Vorschläge.
+Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
+.. *_Möglichkeit 3_*: Klicke auf icon:tune[set=material, role="darkGrey"], um die Suchergebnisse mit Hilfe von Filtern einzugrenzen.
+Siehe die Tabelle unten.
+
+//image::artikel:standard-suche.gif[]
+
+.Suchfilter
+[cols="1,4a"]
+|===
+|Filter |Erläuterung
+
+| *ID*
+|Gib die ID einer Einheit ein.
+
+*_Hinweis_*: Die Einheit-ID ist nicht änderbar und dient zur eindeutigen Kennzeichnung einer Einheit.
+Dieses Suchfeld ist also nützlich, wenn du eine ganz bestimmte Einheit finden willst.
+
+| *Maßeinheit (ISO)*
+|Wähle einen oder mehrere ISO-Codes.
+
+*_Hinweis_*: Dies ist eine "Oder"-Suche.
+Wählst du also die ISO-Codes "X" und "Y", liefert die Suche Einheiten, die entweder den ISO-Code X _oder_ Y haben.
+
+| *Position*
+|Gib die Positionsnummer einer Einheit ein.
+
+| *Name*
+|Gib den Namen einer Einheit ein.
+
+*_Hinweis_*: Dies ist eine unscharfe Suche.
+Die Suchergebnisse enthalten also auch Einheiten, deren Namen dem eingegebenen Text ähnlich sind.
+
+*_Beispiel_*: Gibst du "Gramm" ein, werden auch die Einheiten "Kilogramm" und "Milligramm" gefunden.
+
+|===
+
+.Steuerelemente
+[cols="1,4a"]
+|===
+|Element |Erläuterung
+
+| icon:undo[role="darkGrey"]
+|Setzt die gewählten Filterkriterien zurück.
+
+| icon:search[role="darkGrey"] *SUCHEN*
+|Führt die Suche aus.
+|===
+
+[.collapseBox]
+.*Filtereinstellungen können auch gespeichert werden*
+--
+
+Wenn du eine Suche ausführst, werden deine gewählten Sucheinstellungen oben als so genannte "Chips" dargestellt.
+Diese Sucheinstellungen kannst du speichern, um sie in Zukunft schneller und einfacher wieder verwenden zu können.
+
+[.instruction]
+Aktuellen Filter speichern:
+
+. Führe eine Suche aus.
+. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material, role="darkGrey"]).
+. Klicke auf icon:bookmark_border[set=material, role="darkGrey"] *Aktuellen Filter speichern*.
+. Gib einen Namen ein und schalte die optionalen Einstellungen bei Bedarf ein (icon:toggle_on[set=material, role="blue"]).
+. Klicke auf *Speichern*. +
+→ Die Filtereinstellungen erscheinen nun unter *Gespeicherte Filter* (icon:bookmarks[set=material, role="darkGrey"]).
+
+//image::artikel:vorlage-speichern.gif[]
+
+[cols="1,4a"]
+|===
+|Element |Erläuterung
+
+| *Als Standard festlegen*
+|
+icon:toggle_on[set=material, role="blue"] = Wenn du das Menü *Einrichtung » Artikel » Einheiten* öffnest, werden die Filtereinstellungen bereits vorausgewählt sein und die Suche wird automatisch mit diesen Einstellungen gestartet.
+
+icon:toggle_off[set=material, role="darkGrey"] = Die Filtereinstellungen werden nicht bereits vorausgewählt sein.
+
+| *Filter für alle Benutzer erstellen*
+|
+icon:toggle_on[set=material, role="blue"] = Die Filtervoreinstellungen werden für alle Benutzerkonten sichtbar sein.
+
+icon:toggle_off[set=material, role="darkGrey"] = Die Filtervoreinstellungen werden nur für dein eigenes Benutzerkonto sichtbar sein.
+
+|===
+
+[.instruction]
+Gespeicherte Filter anwenden:
+
+. Klicke auf *Gespeicherte Filter* (icon:bookmarks[set=material, role="darkGrey"]).
+. Klicke auf eine bereits erstellte Filtervoreinstellung. +
+→ Die Suche wird ausgeführt und die verwendeten Sucheinstellungen werden oben als so genannte "Chips" dargestellt.
+
+--
+
+---
+
+Nachdem du die Suche ausgeführt hast, werden dir die Ergebnisse in einer Übersicht angezeigt.
+
+* *_Möglichkeit 1_*: Klicke auf eine Einheit, um sie zu öffnen und die Einstellungen weiter zu bearbeiten.
+* *_Möglichkeit 2_*: Wähle mehrere Einheiten aus (icon:check-square[role="blue"]) und klicke auf das Stiftsymbol (icon:pencil[role="darkGrey"]).
+Dies öffnet alle gewählten Einheiten gleichzeitig und du kannst die Einstellungen weiter bearbeiten.
+
+//image::artikel:vorlage-speichern.gif[]
+
+[#150]
+== Einheit und Inhalt einer Variante angeben
+
+Nachdem du die Einheiten initial konfiguriert hast, kannst du sie mit Varianten verknüpfen.
+Dies kann manuell oder per Import erfolgen.
+
+[.collapseBox]
+.*Manuell*
+--
+
+Wenn du den Inhalt für nur wenige Varianten angeben möchtest, dann empfiehlt es sich, dies manuell zu tun.
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Maße » Option: Inhalt*.
+. Gib eine Zahl in das linke Feld ein.
+. Wähle eine Einheit aus der rechten Dropdown-Liste aus.
+. *Speichere* (icon:save[set=plenty, role="green"]) die Einstellungen.
+
+--
+
+[.collapseBox]
+.*Import*
+--
+
+Wenn du den Inhalt für viele Varianten angeben möchtest, dann empfiehlt es sich, dies per Import zu tun.
+
+. Öffne das Menü *Daten » Import*.
+. Erstelle einen neuen Import des Typs *Artikel*.
+. Nutze die Zuordnungsfelder:
+* xref:daten:elasticSync-artikel.adoc#1810[Inhalt Menge] und xref:daten:elasticSync-artikel.adoc#1800[Inhalt Einheit]. +
++
+oder
+* xref:daten:elasticSync-artikel.adoc#1810[Inhalt Menge] und xref:daten:elasticSync-artikel.adoc#1820[Inhalt Maßeinheit (ISO)].
+
+xref:daten:ElasticSync.adoc#[Weitere Informationen zum Import-Tool im Allgemeinen].
+
+--
+
+[#200]
+== Einheiten kombinieren, um Varianten zu erzeugen
+
+//ToDo - finalise the text in this chapter
+
+Einheiten kannst du mit unterschiedlichen Mengen kombinieren und somit Varianten erzeugen. Beispielsweise verkaufst du eine Flasche Seife, die in 50ml, 100ml oder 150ml erhältlich ist.
+
+xref:artikel:neue-artikel.adoc#200[Beim Erstellen eines Artikels] kannst du die Einheit und den Inhalt des Artikels direkt eingeben. Wenn du xref:artikel:neue-artikel.adoc#400[zusätzliche Varianten erstellst], kannst du auch die Einheit und den Inhalt jeder Variante eingeben.
+
+[#300]
+== Grundpreis auf Vertriebskanälen und Etiketten anzeigen
+
+Sicherlich hast du schon mal den Grundpreis in einem Ladenregal gesehen.
+//Sicherlich hast du schon mal den Grundpreis gesehen, der in den Regalen der Lebensmittelgeschäfte aufgeführt ist.
+Der Grundpreis gibt die Kosten pro Kilogramm, Liter oder andere Maßeinheit an.
+Er errechnet sich aus Einheit, Inhalt und Preis der Variante.
+
+*_Hintergrund-Info_*:
+Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+In der Verordnung wird in § 4 vorgeschrieben, dass Händler, die Produkte nach Gewicht, Volumen, Länge oder Fläche verkaufen, den Grundpreis angeben müssen.
+Die Mengeneinheit für den Grundpreis ist jeweils 1 Kilogramm, 1 Liter, 1 Kubikmeter, 1 Meter oder 1 Quadratmeter der Ware.
+
+---
+
+*_Was Händler tun müssen_*:
+
+Der Grundpreis kann im eigenen plentyShop, auf Vertriebskanälen wie Amazon und eBay oder auf Artikeletiketten dargestellt werden.
+
+[.collapseBox]
+.*plentyShop*
+--
+
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Maße » Option: Inhalt*.
+* Stelle sicher, dass ein numerischer Wert eingegeben wurde und eine Option aus der Dropdown-Liste gewählt wurde.
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verkaufspreise*.
+* Stelle sicher, dass ein Preis eingegeben wurde.
+. Öffne das Menü *CMS » ShopBuilder » [Inhalt öffnen]*
+* Stelle sicher, dass das Widget *Artikel / Artikelpreis* im Layout enthalten ist.
+
+[TIP]
+Gemäß § 5 der link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] muss die Mengeneinheit für den Grundpreis 1 Kilogramm oder 1 Liter sein.
+Das bedeutet aber nicht, dass du im plentymarkets Backend zwangsläufig deine Angaben in Kilogramm oder Liter machen musst.
+Du kannst deine Angaben auch in Gramm oder Milliliter machen.
+plentymarkets rechnet die Werte in Kilogramm oder Liter um und zeigt das Ergebnis im plentyShop an.
+Beispiel: Eine Variante, die eine Mengenangabe von 1,20 EUR / 100 Gramm hat, wird zukünftig automatisch mit 12 EUR / Kilogramm im plentyShop ausgegeben.
+
+--
+
+[.collapseBox]
+.*Vertriebskanäle*
+--
+
+//ToDo - finalise the text in this chapter
+
+bei Kaufland sowie bei den meisten anderen Marktplätzen übertragen wir ja nur die Parameter zum Berechnen des Grundpreises. Die Logik dafür stellt ja der Marktplatz bereit.
+
+Wie genau du vorgehen musst, um den Grundpreis anzuzeigen, wird auf der jeweiligen Handbuchseite beschrieben:
+
+* xref:maerkte:varianten-vorbereiten.adoc#860[Amazon]
+* xref:maerkte:ebay-einrichten.adoc#4000[eBay]
+* xref:maerkte:otto-market.adoc#1302[OTTO]
+* xref:maerkte:plus-gartenxxl.adoc#365[Netto]
+* Kaufland
+
+--
+
+[.collapseBox]
+.*Artikeletiketten*
+--
+
+//ToDo - finalise the text in this chapter
+
+* xref:artikel:barcodes.adoc#900[Artikeletiketten]
+
+--
+
+////
