--- a/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/artikel-und-lagerorte.adoc
@@ -12,7 +12,7 @@ Dazu stehen die Funktionen *<<#100, Artikelsuche>>* und *<<#400, Lagerort inspiz
 [#100]
 == Die Artikelsuche
 
-Du möchtest unterwegs oder direkt im Lager Artikel suchen, Bestände anzeigen oder genauere Informationen zu Artikeln und Varianten einsehen? Dann nutze die Artikelsuche. <<#200, Nimm zunächst einige Einstellungen>> vor und bestimme so, wie die Suchergebnisse aussehen sollen. Diese Einstellungen greifen dann später, wenn du <<#300, in plentyWarehouse nach Artikeln suchst>>.
+Du möchtest unterwegs oder direkt im Lager Artikel suchen, Bestände anzeigen oder genauere Informationen zu Artikeln und Varianten einsehen? Dann nutze die Artikelsuche. <<#200, Nimm zunächst einige Einstellungen>> vor und bestimme so, wie die Suchergebnisse aussehen sollen. Diese Einstellungen greifen dann später, wenn du <<#300, in plentyWarehouse nach Artikeln suchst>>. Zusätzlich kannst du <<#350, verschiedene Shortcuts>> nutzen, um unkompliziert weitere Aktionen für Artikel durchzuführen.
 
 [#200]
 === Einstellungen zur Artikelsuche vornehmen
@@ -87,7 +87,7 @@ Die Detailansicht besteht aus den Tabs *Artikelinformation* und *Bestand*. Diese
 ====
 Artikelinformation::
 +
---
+-- 
 * Varianten-ID und Variantennummer
 * Artikel-ID
 * Externe Varianten-ID
@@ -108,16 +108,38 @@ Eigenschaften für Varianten werden erst in plentyWarehouse angezeigt, wenn du i
 Bestand::
 +
 --
-* Name des Lagerorts, auf dem sich die gefundene Variante aktuell befindet
-* Lager, in dem sich die gefundene Variante aktuell befindet
+* Name des Lagerorts, auf dem sich die Variante aktuell befindet
+* Lager, in dem sich die Variante aktuell befindet
 * Menge (xref:warenwirtschaft:warenbestaende-verwalten.adoc#100[hier: physischer Warenbestand]), in der die Variante aktuell vorrätig ist
 --
 ====
 
+[#350]
+=== Zusätzliche Aktionen in der Artikelansicht
+
+Wenn du Artikel <<#300, suchst>> und die Detailansicht eines Artikel öffnest, werden dir so genannte Shortcuts angezeigt. Diese erlauben dir, direkt weitere Aufgaben für den Artikel zu erledigen. <<table-item-search-shortcuts>> enthält weitere Informationen zu den verfügbaren Optionen.
+
+[[table-item-search-shortcuts]]
+.Verfügbare Shortcuts in der Artikelansicht
+[cols="2,1,6"]
+|====
+|Bedienelement |Symbol |Erläuterung
+
+|*Etikett drucken*
+|icon:print[set=material]
+| Öffnet die Ansicht zum Drucken von Etiketten für diesen Artikel. Nutze diese Funktion, um schnell und unkompliziert Etiketten für einen Artikel über deinen lokalen Drucker zu drucken. +
+*_Wichtig:_* Dieser Shortcut funktioniert nur, wenn du die plentyWarehouse App mit plentyBase verbunden hast und alle notwendigen Einstellungen vorgenommen hast. Andernfalls ist dieser Shortcut ausgegraut und damit nicht nutzbar. Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:etiketten-drucken.adoc#[Etiketten drucken]. 
+
+|*Artikel umbuchen*
+|icon:sync_alt[set=material]
+| Startet die Umbuchung für diesen Artikel. Weitere Informationen zur Umbuchung findest du auf der Handbuchseite xref:warenwirtschaft:artikel-umbuchen.adoc#[Artikel umbuchen].
+
+|====
+
 [#400]
 == Lagerorte suchen
 
-Ähnlich wie bei Artikeln und Varianten kann es sein, dass du gezielt die Informationen zu einem bestimmten Lagerort einsehen möchtest. Speziell für diesen Anwendungsfall beinhaltet die plentyWarehouse App die Funktion *Lagerort inspizieren*.
+Ähnlich wie bei Artikeln und Varianten kann es sein, dass du gezielt die Informationen zu einem bestimmten Lagerort einsehen möchtest. Speziell für diesen Anwendungsfall beinhaltet die plentyWarehouse App die Funktion *Lagerort inspizieren*. Zusätzlich kannst du <<#650, verschiedene Shortcuts>> nutzen, um unkompliziert weitere Aktionen für Lagerorte durchzuführen.
 
 [TIP]
 .Labels für Lagerorte verwenden
@@ -215,3 +237,16 @@ icon:map-signs[] *_Oder:_*: Finde die Kachel zum *Lagerort inspizieren* im Berei
 Die Ergebnisse der Lagerortsuche sind immer gleich aufgebaut. Die oberste Karte enthält Informationen zum Lagerort. Darunter werden die Artikel aufgelistet, die sich aktuell auf diesem Lagerort befinden. Scrolle in der Artikelliste nach unten, um die einzelnen Artikel im Bestand des Lagerorts genauer einzusehen. Tippe alternativ auf icon:filter_list[set=material], um die Artikel nach bestimmten Suchkriterien zu durchsuchen.
 
 Dabei stehen dir die Suchkriterien zur Verfügung, die du zuvor in den Einstellungen für den Bereich <<#option-stockdetails, Bestandsdetails>> vorgenommen hast.
+
+[#650]
+=== Zusätzliche Aktionen für Lagerorte
+
+Wenn du Lagerorte <<#600, suchst>>, wird für jeden Eintrag in der Ergebnisliste ein Shortcut angezeigt. Dieser erlaubt dir, direkt ein Etikett für den Lagerort zu drucken. Tippe beim Eintrag für den gewünschten Lagerort auf icon:print[set=material], um den Druckvorgang für Lagerort-Etiketten zu starten.
+
+[IMPORTANT]
+.Erforderliche Einstellungen
+====
+Dieser Shortcut funktioniert nur, wenn du die plentyWarehouse App mit plentyBase verbunden hast und alle notwendigen Einstellungen vorgenommen hast. Andernfalls ist dieser Shortcut ausgegraut und damit nicht nutzbar. Weitere Informationen findest du auf der Handbuchseite xref:warenwirtschaft:etiketten-drucken.adoc#[Etiketten drucken].
+====
+
+Wenn du auf einen Lagerort aus der Ergebnisliste tippst, wird dir in der Detailansicht ein weiterer Shortcut angezeigt. Tippe auf image:warenwirtschaft:icon_reshelving.png[width=24, height=24], um Artikel vom gewählten Lagerort zu verräumen. Weitere Informationen zum Verräumen findest du auf der Handbuchseite xref:warenwirtschaft:artikel-verraeumen.adoc#[Artikel verräumen].
